k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stt
  labels:
    app.kubernetes.io/part-of: stt
